--- a/public/css/search.css
+++ b/public/css/search.css
@@ -2,11 +2,15 @@
      starter pack
     ==============
  */
-@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800&display=swap");
 @import url("fonts.css");
 /* end of starter pack*/
 #search-intro {
   margin-left: 1.5em;
+}
+
+#search-intro h1 {
+  font-family: 'Apercu Bold';
+  color: rgba(15, 120, 185, 0.89);
 }
 
 @media (max-width: 575px) {
@@ -25,17 +29,22 @@
 }
 
 .type {
-  color: #a89797;
+  color: #AAB8C2;
   -webkit-transition: .3s;
   transition: .3s;
+  font-family: 'Apercu Regular';
 }
 
 .type:hover {
-  color: black;
+  color: rgba(15, 120, 185, 0.89);
+}
+
+.result-number {
+  font-family: 'Apercu Regular';
 }
 
 input[type="radio"]:checked + .type {
-  color: black;
+  color: rgba(15, 120, 185, 0.89);
 }
 
 .hidden, .area {
@@ -81,8 +90,8 @@ input[type="radio"]:checked + .type {
   -webkit-box-sizing: border-box;
   min-height: 200px;
   position: relative;
-  background: -webkit-gradient(linear, left top, right top, from(rgba(238, 118, 82, 0.596)), color-stop(rgba(231, 60, 126, 0.582)), color-stop(rgba(35, 165, 213, 0.541)), to(rgba(35, 213, 171, 0.493)));
-  background: linear-gradient(90deg, rgba(238, 118, 82, 0.596), rgba(231, 60, 126, 0.582), rgba(35, 165, 213, 0.541), rgba(35, 213, 171, 0.493));
+  background: -webkit-gradient(linear, left top, right top, from(rgba(15, 82, 186, 0.596)), color-stop(rgba(0, 128, 255, 0.582)), color-stop(rgba(115, 194, 251, 0.541)), to(rgba(126, 249, 255, 0.493)));
+  background: linear-gradient(90deg, rgba(15, 82, 186, 0.596), rgba(0, 128, 255, 0.582), rgba(115, 194, 251, 0.541), rgba(126, 249, 255, 0.493));
   background-size: 400% 400%;
   -webkit-animation: gradientBackground 2s ease-in-out infinite;
   animation: gradientBackground 2s ease-in-out infinite;
@@ -141,17 +150,15 @@ input[type="radio"]:checked + .type {
   transition: 0.75s;
 }
 
-.grid-item .author, .grid-item .image-title {
-  font-family: Poppins, sans-serif;
-  font-size: 12px;
-}
-
 .grid-item .author {
   font-weight: 400;
+  font-size: 12px;
+  font-family: 'Apercu Regular';
 }
 
 .grid-item .image-title {
   font-size: 20px;
+  font-family: 'Apercu Bold';
 }
 
 .grid-item .download {
@@ -208,9 +215,9 @@ img:not([src]) {
 }
 
 .not-found p, .not-found span {
-  font-family: Poppins, sans-serif;
+  font-family: 'Apercu Medium';
   font-size: 14px;
-  font-weight: 600;
+  color: rgba(15, 120, 185, 0.89);
 }
 
 @media (min-width: 768px) {
