--- a/public/css/upload.css
+++ b/public/css/upload.css
@@ -2,7 +2,6 @@
      starter pack
     ==============
  */
-@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800&display=swap");
 @import url("fonts.css");
 /* end of starter pack*/
 /*  =============
@@ -56,7 +55,7 @@
   display: inline-block;
   overflow: hidden;
   vertical-align: middle;
-  /* new lines */
+  background-color: #F5F8FA;
   width: 100%;
   position: absolute;
   left: 0;
@@ -65,8 +64,12 @@
 }
 
 .custom-file-label:after {
+  background: rgba(15, 120, 185, 0.89);
+  color: #F5F8FA;
+}
+
+.custom-file-label:after:hover {
   background: #007bff;
-  color: white;
 }
 
 .question {
@@ -74,7 +77,7 @@
 }
 
 .question:hover {
-  color: #007bff !important;
+  color: rgba(15, 120, 185, 0.89) !important;
 }
 
 .toggle {
@@ -105,7 +108,7 @@
   position: relative;
   display: inline-block;
   border: solid 1px #ddd;
-  background-color: #fff;
+  background-color: #F5F8FA;
   font-size: 14px;
   line-height: 140%;
   text-align: center;
@@ -211,6 +214,7 @@
 
 .bootstrap-tagsinput {
   width: 100%;
+  background: #F5F8FA;
 }
 
 .bootstrap-tagsinput .tag {
