--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -2,7 +2,6 @@
      starter pack
     ==============
  */
-@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800&display=swap");
 @import url("fonts.css");
 /* end of starter pack*/
 /*  ==============
@@ -277,8 +276,8 @@
 
 #infographics .item {
   overflow: hidden;
-  background: -webkit-gradient(linear, left top, right top, from(rgba(238, 118, 82, 0.596)), color-stop(rgba(231, 60, 126, 0.582)), color-stop(rgba(35, 165, 213, 0.541)), to(rgba(35, 213, 171, 0.493)));
-  background: linear-gradient(90deg, rgba(238, 118, 82, 0.596), rgba(231, 60, 126, 0.582), rgba(35, 165, 213, 0.541), rgba(35, 213, 171, 0.493));
+  background: -webkit-gradient(linear, left top, right top, from(rgba(15, 82, 186, 0.596)), color-stop(rgba(0, 128, 255, 0.582)), color-stop(rgba(115, 194, 251, 0.541)), to(rgba(126, 249, 255, 0.493)));
+  background: linear-gradient(90deg, rgba(15, 82, 186, 0.596), rgba(0, 128, 255, 0.582), rgba(115, 194, 251, 0.541), rgba(126, 249, 255, 0.493));
   background-size: 400% 400%;
   -webkit-animation: gradientBackground 2s ease-in-out infinite;
   animation: gradientBackground 2s ease-in-out infinite;
@@ -320,7 +319,7 @@
 }
 
 .blue-line {
-  background: #007bff;
+  background: rgba(15, 120, 185, 0.89);
   opacity: 0.9;
   width: 18%;
   height: 6px;
@@ -361,7 +360,7 @@
   height: 40px;
   width: 40px;
   background: white;
-  color: #007bff;
+  color: rgba(15, 120, 185, 0.89);
   border-radius: 50%;
   padding-top: 11px;
   -webkit-box-shadow: 2px 3px 10px -3px rgba(0, 123, 255, 0.45);
@@ -378,7 +377,7 @@
 }
 
 .navbar-bg {
-  background: rgba(33, 37, 41, 0.9) !important;
+  background: rgba(27, 27, 27, 0.83) !important;
 }
 
 .owl-prev, .owl-next {
@@ -401,7 +400,7 @@
 }
 
 .owl-dot.active span, .owl-dot:hover span {
-  background: #007bff !important;
+  background: rgba(15, 120, 185, 0.89) !important;
 }
 
 .owl-dot.active span:focus, .owl-dot:hover span:focus {
@@ -413,4 +412,8 @@
 }
 
 /* end of owlCarousel setup*/
+#home-footer {
+  background: -webkit-gradient(linear, left top, right top, from(rgba(27, 27, 27, 0.83)), to(rgba(49, 48, 48, 0.945))), url("../images/footer.jpg");
+  background: linear-gradient(left, rgba(27, 27, 27, 0.83) 0%, rgba(49, 48, 48, 0.945) 100%), url("../images/footer.jpg");
+}
 /*# sourceMappingURL=welcome.css.map */
