--- a/public/css/welcome.scss
+++ b/public/css/welcome.scss
@@ -212,7 +212,7 @@
         .item {
             overflow: hidden;
 
-            background: linear-gradient(90deg, rgba(238, 118, 82, 0.596), rgba(231, 60, 126, 0.582), rgba(35, 165, 213, 0.541), rgba(35, 213, 171, 0.493));
+            background: linear-gradient(90deg, rgba(15, 82, 186, 0.596), rgba(0, 128, 255, 0.582), rgba(115, 194, 251, 0.541), rgba(126, 249, 255, 0.493));
             background-size: 400% 400%;
 
             -webkit-animation: gradientBackground 2s ease-in-out infinite;
@@ -257,7 +257,7 @@
 
     //blue line under the title of events and infographics gallery
     .blue-line {
-        background: color(primary);
+        background: color(nice-blue);
         opacity: 0.9;
         width: 18%;
         height: 6px;
@@ -300,7 +300,7 @@
             height: 40px;
             width: 40px;
             background: white;
-            color: color(primary);
+            color: color(nice-blue);
             border-radius: 50%;
             padding-top: 11px;
             box-shadow: 2px 3px 10px -3px rgba(0, 123, 255, 0.45);
@@ -334,7 +334,7 @@
 
     //dots to indicate the item's position in the carousel
     .owl-dot.active span, .owl-dot:hover span {
-        background: color(primary) !important;
+        background: color(nice-blue) !important;
 
         &:focus { outline: none !important; }
     }
@@ -343,3 +343,7 @@
         background: color(dot-color) !important;
     }
     /* end of owlCarousel setup*/
+
+    #home-footer{
+        background: linear-gradient(left, rgba(27, 27, 27, 0.83) 0%, rgba(49, 48, 48, 0.945) 100%), url('../images/footer.jpg'); 
+    }
