--- a/public/css/general.css
+++ b/public/css/general.css
@@ -136,7 +136,7 @@ main {
   margin: 0;
   padding: 0;
   outline: none !important;
-  border: none;
+  border: none !important;
 }
 
 .dropdown.show .dropdown-menu {
