--- a/public/css/general.scss
+++ b/public/css/general.scss
@@ -104,7 +104,7 @@ main{
     margin: 0;
     padding: 0;
     outline: none !important;
-    border: none;
+    border: none !important;
 }
 
 //dropdown when show class is active
